<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/office_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/officer" />

        <TextView
            android:id="@+id/officer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/office_img"
            android:layout_toRightOf="@+id/office_img"
            android:gravity="center"
            android:text="@string/office_name"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/lin_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/officer_name"
            android:layout_toEndOf="@+id/office_img"
            android:layout_toRightOf="@+id/office_img"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/location"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/market"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_sub_county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_location"
            android:layout_toEndOf="@+id/office_img"
            android:layout_toRightOf="@+id/office_img"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/sub_county" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/market" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_sub_county"
            android:layout_toEndOf="@+id/office_img"
            android:layout_toRightOf="@+id/office_img"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/county" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/county_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tel_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/county"
            android:layout_toEndOf="@+id/office_img"
            android:layout_toRightOf="@+id/office_img"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/phone_no" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_weight=".5"
                android:text="@string/tel" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>